Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #326597 Make sure ical icon theme arguments and parameters sent to it match.
- Get the links in embedded views and blocks to work correctly using a helper function date_real_url().
- Add option to maximum items per day to either show maximum plus 'more' link or hide all and link to day.
- Use view->date fields from either date arguments or date filters.
- Add helper function for creating calendar urls based on type or requested argument.
- Fix undefined index in new Date popup calendar option.
- Make sure 'time ago' formats will work in calendar.
- Fix logic problem in the validation of multiple dates that use the grouped value, non-multiple dates were triggering the error.
- #279679 Fix broken handling of date format selection.
- Make sure popup date switcher isn't shown in the mini calendar.
- Adjust the recent changes to the navigation header to be sure only the calendar header and not the date browser is affected.
- Add the popup calendar date selector back into the D6 version.
- #292164 Keep calendar date selector description from floating out of block in IE.
- #298929 Fix code so that calendar legend doesn't display empty div when empty.
- Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.
- #321831 Make sure day view gets populated.
- Rework html of Year view so month titles will match block view month title for easier css themeing.
- #319344 Add 'empty' class and updated css styles provided by MothersClick.com.
- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.
- #290365 Add upcoming events block to default calendar so both the mini calendar and an upcoming events calendar are available blocks.