@@ -124,27 +124,38 @@ class calendar_plugin_style_ical extends views_plugin_style_rss {
         $this->view->week = isset($argument->week) ? $argument->week : NULL;
         $this->view->min_date = $argument->min_date;
         $this->view->max_date = $argument->max_date;
+        
+        // Stop after the first date argument, if there is more than one.
+        break;
       }
       $i++;
     }
-    foreach ($this->view->filter as $id => $filter) {
-      if ($filter->field == 'date_filter') {
-        // TODO Decide if we want to provide a date here or not.
-        // Adding this now is to prevent fatal errors later if the
-        // view is used in unexpected ways without a date being set.
-        if (empty($filter->min_date)) {
-          $value = $filter->get_default_argument();
-          $range = $filter->date_handler->arg_range($value);
-          $filter->min_date = $range[0];
-          $filter->max_date = $range[1];
+    
+    // The ical display might have date filters instead of arguments.
+    // If we missed getting a min date from date arguments, try date filters.
+    if (empty($this->view->min_date)) {
+      foreach ($this->view->filter as $id => $filter) {
+        if ($filter->field == 'date_filter') {
+          // TODO Decide if we want to provide a date here or not.
+          // Adding this now is to prevent fatal errors later if the
+          // view is used in unexpected ways without a date being set.
+          if (empty($filter->min_date)) {
+            $value = $filter->get_default_argument();
+            $range = $filter->date_handler->arg_range($value);
+            $filter->min_date = $range[0];
+            $filter->max_date = $range[1];
+          }
+          $this->view->granularity = !empty($filter->granularity) ? $filter->granularity : $filter->options['granularity'];
+          $this->view->year = isset($filter->year) ? $filter->year : NULL;
+          $this->view->month = isset($filter->month) ? $filter->month: NULL;
+          $this->view->day = isset($filter->day) ? $filter->day : NULL;
+          $this->view->week = isset($filter->week) ? $filter->week : NULL;
+          $this->view->min_date = $filter->min_date;
+          $this->view->max_date = $filter->max_date;
+          
+          // Stop after the first date filter, if there is more than one.
+          break;
         }
-        $this->view->granularity = !empty($filter->granularity) ? $filter->granularity : $filter->options['granularity'];
-        $this->view->year = isset($filter->year) ? $filter->year : NULL;
-        $this->view->month = isset($filter->month) ? $filter->month: NULL;
-        $this->view->day = isset($filter->day) ? $filter->day : NULL;
-        $this->view->week = isset($filter->week) ? $filter->week : NULL;
-        $this->view->min_date = $filter->min_date;
-        $this->view->max_date = $filter->max_date;
       }
       $i++;
     }
