@@ -22,8 +22,8 @@ title = Attachments
 parent = overview
 weight = 3
 
-[miscellaneous]
-title = Miscellaneous
+[embedding]
+title = Embedding views
 parent = overview
 weight = 10
 
